[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lightcode"
version = "0.1.1"
readme= "README.md"
authors = [{ name = "Bas van de Kerkhof", email = "Bas.vandeKerkhof@shell.com" }]
urls = {Repository = "https://github.com/sede-x/gas_dispersion_LightCode"}
requires-python = "==3.9.*"
dependencies = [
    "pandas>=1.3.4",
    "numpy>=1.20.3",
    "azure-storage-blob>=12.13.0",
    "h5py>=3.2.1",
    "plotly>=5.6.0",
    "scipy>=1.7.1",
    "pymap3d==2.9.1",
    "python-dotenv>=0.20.0",
    "geojson>=2.5.0",
    "geopandas>=0.11.0",
    "shapely>=1.8.2",
    "Fiona>=1.8.21",
    "scikit-learn>=1.2.1"]